--- a/addon/etc/lgtv.conf
+++ b/addon/etc/lgtv.conf
@@ -1,7 +1,2 @@
-LOGFILE="/usr/local/addons/lgtv/log.txt"
-ETHERWAKE="/usr/local/addons/cuxd/extra/ether-wake"
-CLIENT_KEY=""
-IP_ADDRESS=""
-HW_ADDRESS=""
-PORT=3000
-
+# HomeMatic addon to control LG WebOS Smart TV
+# ini configuration file
